# mygrid_scheduler

./: Cargo.toml  README.md
config/: config.toml  consumption_diagram.toml
cron/: README.md  start.sh
scripts/: deploy.sh
src/: config.rs  consumption.rs  errors.rs  initialization.rs  logging.rs  macros.rs  main.rs  models.rs  scheduler.rs  scheduling.rs  spline.rs  worker.rs
src/common/: mod.rs  models.rs
src/manager_forecast/: errors.rs  mod.rs  models.rs
src/manager_fox_cloud/: errors.rs  mod.rs  models.rs
src/manager_mail/: errors.rs  mod.rs
src/manager_nordpool/: errors.rs  mod.rs  models.rs
src/manager_production/: errors.rs  mod.rs
systemd/: README.md  mygridscheduler.service  mygridscheduler.timer
