[package]
name = "mygrid_scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.14", features = ["chrono"] }

[profile.release]
# debug = true
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling