[package]
name = "mygrid_scheduler"
version = "0.4.1"
edition = "2024"

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.16", features = ["chrono"] }
rayon = "1.11"
ureq = "3.1"
spa_sra = {version = "0.3", features = ["chrono_0_4"]}
lettre = "0.11"
log4rs = "1.4"
log = "0.4"
toml = "0.9"
md-5 = "0.10.6"
thiserror = "2.0"
anyhow = "1.0"
glob = "0.3"

[profile.release]
# debug = true
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling